logs/Slang/generated/hdlconv/hdlconvertor_p347.sv.log
name: hdlconvertor_p347
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:7:1: error: language feature not yet supported
global clocking sub_sys1 @(subclk1); endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:9:1: error: unknown module 'common_checks'
common_checks checks(req, ack);
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:13:1: error: language feature not yet supported
global clocking sub_sys2 @(subclk2); endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:15:1: error: unknown module 'common_checks'
common_checks checks(req, ack);
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:19:1: error: language feature not yet supported
global clocking another_clocking @(another_clk); endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:21:1: error: language feature not yet supported
property p(req, ack);
^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:25:1: error: expected member
checker common_checks(logic req, logic ack);
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:25:33: error: expected identifier
checker common_checks(logic req, logic ack);
                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:25:34: error: expected declarator
checker common_checks(logic req, logic ack);
                                 ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:25:39: error: expected ','
checker common_checks(logic req, logic ack);
                                      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:25:43: error: expected declarator
checker common_checks(logic req, logic ack);
                                          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:26:1: error: language feature not yet supported
assert property (another_module.p(req, ack));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:27:1: error: expected member
endchecker
^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:35:1: error: language feature not yet supported
global clocking sub_sys1 @(subclk1); endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:41:1: error: language feature not yet supported
global clocking sub_sys2 @(subclk2); endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:47:1: error: language feature not yet supported
global clocking another_clocking @(another_clk); endclocking
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p347.sv:49:3: error: use of undeclared identifier '$global_clock'
@($global_clock);
  ^~~~~~~~~~~~~
